ecmascript/parser/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode4/input.ts.stderr
error[1100]: Invalid use of 'arguments' in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode4/input.ts:2:1
  |
2 | arguments = 1;
  | ^^^^^^^^^

error: 'eval' and 'arguments' cannot be used as a binding identifier in strict mode
 --> $DIR/tests/typescript-errors/tsc/parser/ecmascript5/StrictMode/parserStrictMode4/input.ts:2:1
  |
2 | arguments = 1;
  | ^^^^^^^^^

